--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta
           name="viewport"
-          content="width=device-width, initial-scale=1.0" />
+          content="width=device-width, initial-scale=1.0"/>
   <title>리액트 기초 학습</title>
 </head>
 <body>
-  <div id="root"></div>
-  <div id="backdrop-root"></div>
-  <div id="modal-overlay-root"></div>
+
+  <div id="modal"></div>
+  <div id="content">
+    <header>
+      <h1>The <em>Almost</em> Final Countdown</h1>
+      <p>Stop the timer once you estimate that time is (almost) up</p>
+    </header>
+    <div id="root"></div>
+  </div>
 
   <script
           type="module"
